# peintur

./: .gitignore  Cargo.toml
peintur/: Cargo.toml
peintur-py/: Cargo.toml
peintur-py/src/: lib.rs  wrapper.rs
peintur/src/: configuration.rs  lib.rs  plot.rs  private.rs
peintur/src/common/: color.rs  mod.rs
peintur/src/layout/: mod.rs  themes.rs  update_menu.rs
peintur/src/traces/: mod.rs  scatter.rs
peintur/templates/: jupyter_notebook_plot.html  plot.html  static_plot.html
peintur_derive/: Cargo.toml
peintur_derive/src/: field_setter.rs  lib.rs
