[package]
name = "peintur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = { version = "1.0.16", features = [] }
rand = "0.8.5"
serde = { version = "1.0.195", features = [] }
serde_json = { version = "1.0.111", features = [] }
peintur_derive = { path = "../peintur_derive" }
askama = { version = ">=0.11.0, <0.13.0", features = ["serde-json"] }
serde_repr = "0.1.18"
serde_with = { version = "3.4.0", features = [] }
erased-serde = "0.4.2"
once_cell = "1.19.0"
