[package]
name = "peintur_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.48"
quote = "1.0.35"
proc-macro2 = { version = "1.0.76", features = [] }
darling = { version = "0.20.3", features = [] }

[lib]
proc-macro = true
